--- a/docassemble/VTFeeWaiver/data/static/larger_collapse_template.css
+++ b/docassemble/VTFeeWaiver/data/static/larger_collapse_template.css
@@ -7,7 +7,7 @@
 
 .larger_collapse_template .al_collapse_template a.al_toggle,
 .al_display_template a.al_toggle {
-  color: #0d6efd; /* Blue */
+  color: #0256D4; /* Blue */
   text-decoration: none;
   text-decoration-line: none;
 }
